--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "firebase": "^9.8.2",
+    "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -16,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-session-api": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
