--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spr-web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@linways/table-to-excel": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,9 +11,13 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
+    "express": "^4.18.1",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
+    "nodemon": "^2.0.19",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-calendar": "^3.7.0",
@@ -23,7 +28,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-session-api": "^1.1.0",
+    "sftp-upload": "^1.0.4",
     "sheetjs-style": "^0.15.8",
+    "ssh2-sftp-client": "^9.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.9/xlsx-0.18.9.tgz",
     "xlsx-style": "^0.8.13"
