--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
+    "i18next": "^21.9.0",
+    "i18next-browser-languagedetector": "^6.1.5",
     "jquery": "^3.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
@@ -28,6 +30,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.18.4",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
