--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "build",
-    "site": "spr-kirpis",
+    "site": "spr-kirppis-kok",
     "ignore": [
       "firebase.json",
       "**/.*",
