--- a/.env
+++ b/.env
@@ -16,20 +16,20 @@ REACT_APP_DATABASE_CONFIG = {
   // appId: "1:675286720011:web:4c9a96eee04bca32c4310e",
 };
 
-REACT_APP_DATABASE_APIKEY = "AIzaSyBBBDUPxVGYNMX9DsKNeO1Qtdpr6k3L6q4"
-REACT_APP_DATABASE_AUTHDOMAIN = "spr-kirppis-154eb.firebaseapp.com"
-REACT_APP_DATABASE_DATABASEURL = "https://spr-kirppis-154eb-default-rtdb.europe-west1.firebasedatabase.app"
-REACT_APP_DATABASE_PROJECTID = "spr-kirppis-154eb"
-REACT_APP_DATABASE_STORAGEBUCKET = "spr-kirppis-154eb.appspot.com"
-REACT_APP_DATABASE_MESSAGINGSENDERID = "675286720011"
+// REACT_APP_DATABASE_APIKEY = "AIzaSyBBBDUPxVGYNMX9DsKNeO1Qtdpr6k3L6q4"
+// REACT_APP_DATABASE_AUTHDOMAIN = "spr-kirppis-154eb.firebaseapp.com"
+// REACT_APP_DATABASE_DATABASEURL = "https://spr-kirppis-154eb-default-rtdb.europe-west1.firebasedatabase.app"
+// REACT_APP_DATABASE_PROJECTID = "spr-kirppis-154eb"
+// REACT_APP_DATABASE_STORAGEBUCKET = "spr-kirppis-154eb.appspot.com"
+// REACT_APP_DATABASE_MESSAGINGSENDERID = "675286720011"
 
-// REACT_APP_DATABASE_APIKEY = "AIzaSyC7y_bVzkdwhbwnwXPDBFF-4LBEXTKacR0"
-// REACT_APP_DATABASE_AUTHDOMAIN = "spr-kirppis-kok.firebaseapp.com"
-// REACT_APP_DATABASE_DATABASEURL = "https://spr-kirppis-kok-default-rtdb.europe-west1.firebasedatabase.app"
-// REACT_APP_DATABASE_PROJECTID = "spr-kirppis-kok"
-// REACT_APP_DATABASE_STORAGEBUCKET = "spr-kirppis-kok.appspot.com"
-// REACT_APP_DATABASE_MESSAGINGSENDERID = "583585253614"
-// REACT_APP_DATABASE_APP_ID = "1:583585253614:web:00bcb1dd7ac527f7524bff"
-// REACT_APP_DATABASE_MEASUREMENTID = "G-5WXJND9EZV"
+REACT_APP_DATABASE_APIKEY = "AIzaSyC7y_bVzkdwhbwnwXPDBFF-4LBEXTKacR0"
+REACT_APP_DATABASE_AUTHDOMAIN = "spr-kirppis-kok.firebaseapp.com"
+REACT_APP_DATABASE_DATABASEURL = "https://spr-kirppis-kok-default-rtdb.europe-west1.firebasedatabase.app"
+REACT_APP_DATABASE_PROJECTID = "spr-kirppis-kok"
+REACT_APP_DATABASE_STORAGEBUCKET = "spr-kirppis-kok.appspot.com"
+REACT_APP_DATABASE_MESSAGINGSENDERID = "583585253614"
+REACT_APP_DATABASE_APP_ID = "1:583585253614:web:00bcb1dd7ac527f7524bff"
+REACT_APP_DATABASE_MEASUREMENTID = "G-5WXJND9EZV"
 
 
